--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,7 +31,7 @@ dependencies:
   font_awesome_flutter: ^8.8.1
   lottie: ^0.4.1
   provider: ^4.3.1
-  
+  popup_menu: ^1.0.5
   
 dev_dependencies:
   flutter_test:
