--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
   lottie: ^0.4.1
   provider: ^4.3.1
   popup_menu: ^1.0.5
+  flutter_svg: ^0.17.4
   
 dev_dependencies:
   flutter_test:
@@ -51,6 +52,12 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/noMessages.json
+    - assets/icons/arrowPath.svg
+    - assets/icons/attachFile.svg
+    - assets/icons/chatMessageSend.svg
+    - assets/icons/iconsMessage.svg
+    - assets/icons/setting.svg
+
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
