--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,7 +33,8 @@ dependencies:
   provider: ^4.3.1
   popup_menu: ^1.0.5
   flutter_svg: ^0.17.4
-  
+  pubnub: ^1.0.0
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
