--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   popup_menu: ^1.0.5
   flutter_svg: ^0.17.4
   pubnub: ^1.0.0
+  fdottedline: ^1.0.1
 
 dev_dependencies:
   flutter_test:
